[package]
name = "zkp-chaum-pedersen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0"
tonic = "0"
prost = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # async rust runtime
clap = { version = "4", features = ["derive","cargo"] }
anyhow = "1"
rpassword = "7"

[build-dependencies]
tonic-build = "0"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"
